# turbo_auto_saloon

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  jsconfig.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: crud.py  main.py  models.py  schemas.py
app/_testing/cars/: car_creator.py  car_creator_1.py
app/api/: main.py
app/api/routes/: BuyListsRout.py  FinesRout.py  UserRout.py
app/infrastructure/: exception_handler.py  init_db.py  logger.py
app/infrastructure/alembic/: env.py
app/infrastructure/core/: config.py
app/infrastructure/db/: session.py
app/infrastructure/repositories/: BuyListsRepository.py  CarChassisRepository.py  CarDimensionsRepository.py  CarEngineRepository.py  CarEntityRepository.py  CarInteriorRepository.py  CategoryHierarchyRepository.py  CategoryRepository.py  CompanyRepository.py  DetailBrandRepository.py  DetailCategoryRepository.py  DetailCompatibilityRepository.py  DetailCrossReferenceRepository.py  DetailRepository.py  DetailReviewRepository.py  DiscountRepository.py  (+6 more)
app/models/: __init__.py
app/services/: testservices.py
docs/: docs_car_en.html  docs_car_zh.html  docs_cars_ru.html  kafka.md  poetry.md  redis.md
nginx/conf.d/: default.conf
public/: index.html  manifest.json
src/: App.css  App.js  App.test.js  index.css
src/pages/: AboutServDetailingPage.js  DetailingPage.js  InformationPage.js  ServicesPage.js  ShopPage.js
src/Сonstants/: MenuItems.js  PagesData.js  Photos.js  siteConstants.js
(+158 files in other folders)
