[project]
name = "turbo-shop-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "environs (>=14.2.0,<15.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "ruff (>=0.11.12,<0.12.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
